--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             </a>
         </h1>
         <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-          大家好 this is my blog
+          大家好 你看这个碗它又大又圆
         </div>
           <a href="http://example.org/posts/%E5%BC%80%E5%A7%8B/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
         
