--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
       <div class="tc-l pv3 ph3 ph4-ns">
         <h1 class="f2 f-subheadline-l fw2 light-silver mb0 lh-title">
-          我的博客
+         我傻了都
         </h1>
         
       </div>
